glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/place-properties.glx
place_properties:
  custom_place_prop:
    label: "Custom Place Property"
    value_type: string


